updating test for Local User - recipe card report, adding test for Location gap check

--- a/MenuCycle.Tests/MenuCycle.Tests.csproj
+++ b/MenuCycle.Tests/MenuCycle.Tests.csproj
@@ -539,6 +539,7 @@
     <Compile Include="PageObjects\MassUpdate\MassUpdateOccurrencesRow.cs" />
     <Compile Include="PageObjects\MassUpdate\UpdatePrices\UpdatePrices.cs" />
     <Compile Include="PageObjects\MassUpdate\UpdatePrices\UpdatePricesRow.cs" />
+    <Compile Include="PageObjects\Review\DestinationReviewPage.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.Chrome.config">
