editing/adding tests for post-prod screen, adding option to run on local env

--- a/MenuCycle.Tests/Support/Environment.config
+++ b/MenuCycle.Tests/Support/Environment.config
@@ -30,4 +30,11 @@
     "User": "",
     "Password": ""
   },
+  "Local":
+   {
+    "URL": "http://localhost:4200/#/login",
+    "URL_SF":"",
+    "User": "",
+    "Password": ""
+  },
 }
